fixes from validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
@@ -13,7 +13,7 @@
   <section class="colored-section" id="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><img src="logo.png" alt="logo" height="50px"> tindog</a>
+        <a class="navbar-brand" href=""><img src="logo.png" alt="logo" height="50"> tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -74,9 +74,9 @@
   </section>
   <section class="white-section" id="press">
     <h2>Featured in</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Ylen_logo.svg/1200px-Ylen_logo.svg.png" height="100px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Ylen_logo.svg/1200px-Ylen_logo.svg.png" height="100" alt="yle-logo">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img src="https://www.hs.fi/og-1920x1920.png" height="100px">
+    <img src="https://www.hs.fi/og-1920x1920.png" height="100" alt="hs-logo">
 
   </section>
 
