--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section class="white-section" id="press">
     <h2>Featured in</h2>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Ylen_logo.svg/1200px-Ylen_logo.svg.png" height="100" alt="yle-logo">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/TechCrunch_logo.svg/1200px-TechCrunch_logo.svg.png" height="100" class="tc-logo" alt="tc-logo">
     <img src="https://www.hs.fi/og-1920x1920.png" height="100" alt="hs-logo">
 
   </section>
